--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Tue Aug 23 10:21:34 CST 2016
+#Thu Aug 25 22:03:49 CST 2016
 systemProp.http.proxyHost=127.0.0.1
 org.gradle.jvmargs=-Xmx1536m
+android.useDeprecatedNdk=true
 systemProp.http.proxyPort=1080
